[gd_scene load_steps=8 format=3 uid="uid://ccxsc63hr3grc"]

[ext_resource type="Script" path="res://Scripts/falling_block.gd" id="1_mx1th"]
[ext_resource type="Texture2D" uid="uid://df6ca7vemnc78" path="res://Assets/sprites/world_tileset.png" id="1_sfspr"]

[sub_resource type="Animation" id="Animation_oqk5p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, -8)]
}

[sub_resource type="Animation" id="Animation_f7ec1"]
resource_name = "ReadyToFall"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(8, -8), Vector2(11, -10), Vector2(6, -8), Vector2(9, -8), Vector2(8, -10), Vector2(8, -7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_acabi"]
_data = {
"RESET": SubResource("Animation_oqk5p"),
"ReadyToFall": SubResource("Animation_f7ec1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ssc3d"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0sbkb"]
size = Vector2(16, 1)

[node name="FallingBlock" type="AnimatableBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_mx1th")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(8, -8)
texture = ExtResource("1_sfspr")
region_enabled = true
region_rect = Rect2(96, 32, 16, 16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_acabi")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, -8)
shape = SubResource("RectangleShape2D_ssc3d")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, -16.5)
shape = SubResource("RectangleShape2D_0sbkb")

[node name="FallTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ResetTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="FallTimer" to="." method="_on_fall_timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
